--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                Anonymous Submission 1627,</span>
+                Anonymous Submission 1627</span>
                   </div>
                 </a>
               </span>
