--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="hero-body">
       <img src="static/images/GLOSS.png" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
+        The details of CS rules and conversion process. (a) is the chart for the Mandarin Chinese Cued Speech (figure from [3]), where five  different hand positions are used to code vowels, and eight finger shapes are used to code consonants in Mandarin Chinese. (b) shows the  proposed instructional gloss, which directly links the text to the CS movements.
       </h2>
     </div>
   </div>
