--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
-      <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <h2 class="title">Open Source</h2>
+      <pre><code>The source code and data will be open source, the newset update will be published in this page </code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
