--- a/index.html
+++ b/index.html
@@ -110,35 +110,28 @@
         <!-- Your image here -->
         <img src="static/images/conversion-CS.png" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          First image description.
+          The overall diagram of text/audio to CS gesture generation.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
         <img src="static/images/framework.png" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          Second image description.
+          The overall framework of the proposed GlossDiff, where (a), (b), (c) represent the Knowledge Infusion Module, Audio Rhythmic Module and Diffusion-based generation module, respectively.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
         <img src="static/images/vis.png" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-         Third image description.
+         The visualization result of the generated gesture according to fine-grained Gloss
        </h2>
      </div>
-     <div class="item">
-      <!-- Your image here -->
-      <img src="static/images/user.jpg" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        Fourth image description.
-      </h2>
-    </div>
              <div class="item">
       <!-- Your image here -->
       <img src="static/images/vissota.png" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
-        Fourth image description.
+        The visualization result of the generated gestures compared to SOTA method.
       </h2>
     </div>
   </div>
