--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
             <source src="static/videos/tesedemo1.mp4"
             type="video/mp4">
           </video>
+                <h2 class="subtitle has-text-centered">
+       Input Text: 我想你了 |Wo|Xyang|Ni|Le| (I miss you).
+      </h2>
         </div>
       </div>
     </div>
