--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
         <div class="item item-video1">
           <video poster="" id="video1" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
-            <source src="static/videos/tesedemo1.mp4"
+            <source src="static/videos/testdemo1.mp4"
             type="video/mp4">
           </video>
                 <h2 class="subtitle has-text-centered">
-       Input Text: 我想你了 |Wo|Xyang|Ni|Le| (I miss you).
+       Input Text: |Wo|Xyang|Ni|Le| (I miss you).
       </h2>
         </div>
       </div>
