--- a/index.html
+++ b/index.html
@@ -154,6 +154,20 @@
             type="video/mp4">
           </video>
         </div>
+        <div class="item item-video2">
+          <video poster="" id="video2" autoplay controls muted loop height="100%">
+            <!-- Your video file here -->
+            <source src="static/videos/testdemo1.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video3">
+          <video poster="" id="video3" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/testdemo1.mp4"
+            type="video/mp4">
+          </video>
+        </div>
       </div>
     </div>
   </div>
