--- a/index.html
+++ b/index.html
@@ -149,21 +149,21 @@
         <div class="item item-video1">
           <video poster="" id="video1" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
-            <source src="static/videos/testdemo1.mp4"
+            <source src="static/videos/D1.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video2">
           <video poster="" id="video2" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
-            <source src="static/videos/testdemo1.mp4"
+            <source src="static/videos/D2.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video3">
           <video poster="" id="video3" autoplay controls muted loop height="100%">\
             <!-- Your video file here -->
-            <source src="static/videos/testdemo1.mp4"
+            <source src="static/videos/D3.mp4"
             type="video/mp4">
           </video>
         </div>
